5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4007/executions/1745_1532.log
== TEST (2019-05-15 14:14:18) 
-- CODE:
x = float(input("digite um numero: "))
k = int(input("qtde. termos: "))
cont = 0
soma = 0
if (k == 1):
	print(x)
	else:
		while(cont < n):
			soma = soma + (x + (2 * cont + 1)/ (2 * cont + 1))
			cont = cont + 1
		print(soma)
-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:14:47) 
-- CODE:
x = float(input("digite um numero: "))
k = int(input("qtde. termos: "))
cont = 0
soma = 0
if (k == 1):
	print(x)
else:
	while(cont < n):
		soma = soma + (x + (2 * cont + 1)/ (2 * cont + 1))
		cont = cont + 1
	print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while(cont < n):
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:14:57) 
-- CODE:
x = float(input("digite um numero: "))
k = int(input("qtde. termos: "))
cont = 0
soma = 0
if (k == 1):
	print(x)
else:
	while(cont < n):
		soma = soma + (x + (2 * cont + 1)/ (2 * cont + 1))
		cont = cont + 1
	print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while(cont < n):
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:15:14) 
-- CODE:
x = float(input("digite um numero: "))
k = int(input("qtde. termos: "))
cont = 0
soma = 0
if (k == 1):
	print(x)
else:
	while(cont < k):
		soma = soma + (x + (2 * cont + 1)/ (2 * cont + 1))
		cont = cont + 1
	print(soma)
-- OUTPUT:
15.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:15:24) 
-- CODE:
x = float(input("digite um numero: "))
k = int(input("qtde. termos: "))
cont = 0
soma = 0
if (k == 1):
	print(x)
else:
	while(cont < k):
		soma = soma + (x + (2 * cont + 1)/ (2 * cont + 1))
		cont = cont + 1
	print(soma)
-- OUTPUT:
15.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:19:44) 
-- CODE:
x = float(input("digite um numero: "))
k = int(input("qtde. termos: "))
soma = 0
cont = 0
if (k == 1):
	print(x)
else:	
	while(cont < k):
		soma = soma + (x + (x ** 3)/(factorial(3)))
		cont = cont + 1
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    soma = soma + (x + (x ** 3)/(factorial(3)))
NameError: name 'factorial' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:20:21) 
-- CODE:
from math import*
x = float(input("digite um numero: "))
k = int(input("qtde. termos: "))
soma = 0
cont = 0
if (k == 1):
	print(x)
else:	
	while(cont < k):
		soma = soma + (x + (x ** 3)/(factorial(3)))
		cont = cont + 1
print(soma)
-- OUTPUT:
16.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:44:34) 
-- CODE:
from math import*
x = float(input("digite um numero: "))
k = int(input("qtde. termos: "))
soma = 0
e = 1
d = 1
while (k > cont):
	soma = soma + (x ** e)/factorial(d)
	e = e + 2
	d = d + 2
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    while (k > cont):
NameError: name 'cont' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:45:24) 
-- CODE:
from math import*
x = float(input("digite um numero: "))
k = int(input("qtde. termos: "))
soma = 0
e = 1
d = 1
cont = 0
while (k > cont):
	soma = soma + (x ** e)/factorial(d)
	e = e + 2
	d = d + 2
	cont = cont + 1
print(soma)
-- OUTPUT:
3.626807760141093
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:45:29) 
-- CODE:
from math import*
x = float(input("digite um numero: "))
k = int(input("qtde. termos: "))
soma = 0
e = 1
d = 1
cont = 0
while (k > cont):
	soma = soma + (x ** e)/factorial(d)
	e = e + 2
	d = d + 2
	cont = cont + 1
print(soma)
-- OUTPUT:
3.626807760141093
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:45:35) 
-- CODE:
from math import*
x = float(input("digite um numero: "))
k = int(input("qtde. termos: "))
soma = 0
e = 1
d = 1
cont = 0
while (k > cont):
	soma = soma + (x ** e)/factorial(d)
	e = e + 2
	d = d + 2
	cont = cont + 1
print(soma)
-- OUTPUT:
3.626807760141093
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:46:05) 
-- CODE:
from math import*
x = float(input("digite um numero: "))
k = int(input("qtde. termos: "))
soma = 0
e = 1
d = 1
cont = 0
while (k > cont):
	soma = soma + (x ** e)/factorial(d)
	e = e + 2
	d = d + 2
	cont = cont + 1
print(round(soma, 9))
-- EXECUTION TIME:
0.155428
-- TEST CASE 1:
---- input:
2.0
5
---- correct output:
3.62680776
---- user output:
3.62680776
-- TEST CASE 2:
---- input:
10.0
2
---- correct output:
176.666666667
---- user output:
176.666666667
-- TEST CASE 3:
---- input:
12.0
35
---- correct output:
81377.39570643
---- user output:
81377.39570643
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
